--- a/style.css
+++ b/style.css
@@ -2,4 +2,55 @@ html, body {
   margin: 0;
   height: 100%;
   background-color: #121212;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  filter: hue-rotate(216deg) grayscale(0.8);
+}
+
+.main {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 160px;
+  margin: auto;
+  font-size: 24px;
+  line-height: 3;
+  text-align: center;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.logo::before,
+.logo::after  {
+  content: '';
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.7);
+  width: 110%;
+}
+
+#svg {
+  position: relative;
+  z-index: 5;
 }
