--- a/style.css
+++ b/style.css
@@ -42,8 +42,7 @@ html, body {
   font-weight: 600;
 }
 
-.logo::before,
-.logo::after  {
+.line {
   content: '';
   height: 2px;
   background-color: rgba(255, 255, 255, 0.7);
