--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ html, body {
   z-index: 10;
   width: 100%;
   height: 100%;
-  pointer-events: none;
 }
 
 .logo {
@@ -40,6 +39,12 @@ html, body {
   color: #fff;
   text-transform: uppercase;
   font-weight: 600;
+  padding: 60px;
+}
+
+#dialog {
+  display: none;
+  margin: 32px;
 }
 
 .line {
