--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #121212;
+  min-width: 320px;
 }
 
 p {
@@ -18,6 +19,11 @@ p {
   margin: auto;
   padding: 32px;
   color: rgb(226, 226, 226);
+}
+
+#dialog .el {
+  opacity: 0;
+  transform: translateX(-100px);
 }
 
 #svg {
@@ -93,5 +99,7 @@ p {
   text-align: center;
   text-transform: uppercase;
   color: #121212;
-  background: #ffffff;
+  background: rgb(226, 226, 226);
+  border: none;
+  cursor: pointer;
 }
